Fix image shimmer flickering by limiting animation to single run
Changed shimmer from infinite loop to single 1.5s ease-in-out,
so slow-loading images show a static placeholder instead of
endless flickering.

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -523,8 +523,8 @@ i {
     background: var(--shimmer-bg);
     height: 100%;
     width: 100%;
-    -webkit-animation: shimmer 1s infinite;
-    animation: shimmer 1s infinite;
+    -webkit-animation: shimmer 1.5s ease-in-out 1 forwards;
+    animation: shimmer 1.5s ease-in-out 1 forwards;
   }
 
   @-webkit-keyframes shimmer {
